--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <nav>
                 <i class="fab fa-github"></i> <a href="https://github.com/webmapping/wien">Github</a>
             </nav>
+
+            <link rel="stylesheet" href="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css" />
+<script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js"></script>
+
         </header>
         <article>
             <div id="map"></div>
