MarkerCluster mit disableClusteringAtZoom implementiert

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         integrity="sha512-5EYsvqNbFZ8HX60keFbe56Wr0Mq5J1RrA0KdVcfGDhnjnzIRsDrT/S3cxdzpVN2NGxAB9omgqnlh4/06TvWCMw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- Leaflet MarkerCluster Bei Plugins eigentlich immer ein css File dazu-->
+    <!-- CDNJS.com Leaflet MarkerCluster Bei Plugins eigentlich immer ein css File dazu-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.3/MarkerCluster.css"
         integrity="sha512-mQ77VzAakzdpWdgfL/lM1ksNy89uFgibRQANsNneSTMD/bj0Y/8+94XMwYhnbzx8eki2hrbPpDm0vD0CiT2lcg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
